@@ -4,32 +4,22 @@
 
 CDSS HydroBase Database Java Library
 CDSS HydroBase Database Java Library is a part of Colorado's Decision Support Systems (CDSS)
-Copyright (C) 2018-2019 Colorado Department of Natural Resources
+Copyright (C) 2018-2025 Colorado Department of Natural Resources
 
 CDSS HydroBase Database Java Library is free software:  you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
     the Free Software Foundation, either version 3 of the License, or
     (at your option) any later version.
 
-    CDSS HydroBase Database Java Library is distributed in the hope that it will be useful,
+CDSS HydroBase Database Java Library is distributed in the hope that it will be useful,
     but WITHOUT ANY WARRANTY; without even the implied warranty of
     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
     GNU General Public License for more details.
 
-    You should have received a copy of the GNU General Public License
+You should have received a copy of the GNU General Public License
     along with CDSS HydroBase Database Java Library.  If not, see <https://www.gnu.org/licenses/>.
 
 NoticeEnd */
-
-// ----------------------------------------------------------------------------
-// HydroBase_TableModel_AgriculturalCASSLivestockStats - Table Model for a
-//	Vector of HydroBase_AgriculturalCASSLivestockStats objects.
-// ----------------------------------------------------------------------------
-// Copyright:   See the COPYRIGHT file
-// ----------------------------------------------------------------------------
-// History:
-// 2006-10-30	Steven A. Malers, RTi	Initial version from CropStats.
-// ----------------------------------------------------------------------------
 
 package DWR.DMI.HydroBaseDMI;
 
@@ -178,8 +168,8 @@ public Object getValueAt(int row, int col) {
 		case COL_COUNTY:	return c.getCounty();
 		case COL_COMMODITY:	return c.getCommodity();
 		case COL_TYPE:	return c.getType();
-		case COL_CAL_YEAR:	return new Integer(c.getCal_year());
-		case COL_HEAD:		return new Integer(c.getHead());
+		case COL_CAL_YEAR:	return Integer.valueOf(c.getCal_year());
+		case COL_HEAD:		return Integer.valueOf(c.getHead());
 		default:		return "";
 	}
 }
