@@ -4,36 +4,22 @@
 
 CDSS HydroBase Database Java Library
 CDSS HydroBase Database Java Library is a part of Colorado's Decision Support Systems (CDSS)
-Copyright (C) 2018-2019 Colorado Department of Natural Resources
+Copyright (C) 2018-2025 Colorado Department of Natural Resources
 
 CDSS HydroBase Database Java Library is free software:  you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
     the Free Software Foundation, either version 3 of the License, or
     (at your option) any later version.
 
-    CDSS HydroBase Database Java Library is distributed in the hope that it will be useful,
+CDSS HydroBase Database Java Library is distributed in the hope that it will be useful,
     but WITHOUT ANY WARRANTY; without even the implied warranty of
     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
     GNU General Public License for more details.
 
-    You should have received a copy of the GNU General Public License
+You should have received a copy of the GNU General Public License
     along with CDSS HydroBase Database Java Library.  If not, see <https://www.gnu.org/licenses/>.
 
 NoticeEnd */
-
-// ----------------------------------------------------------------------------
-// HydroBase_TableModel_AgriculturalNASSCropStats - Table Model for a Vector of 
-//	HydroBase_AgriculturalNASSCropStats objects.
-// ----------------------------------------------------------------------------
-// Copyright:   See the COPYRIGHT file
-// ----------------------------------------------------------------------------
-// History:
-// 2005-02-10	J. Thomas Sapienza, RTi	Initial version.
-// 2005-04-29	JTS, RTi		Added finalize().
-// 2005-06-28	JTS, RTi		Removed the unused DMI parameter.
-// 2005-07-06	Steven A. Malers, RTi	Change the output format for acres to
-//					.0 and add ACRE to the heading.
-// ----------------------------------------------------------------------------
 
 package DWR.DMI.HydroBaseDMI;
 
@@ -180,8 +166,8 @@ public Object getValueAt(int row, int col) {
 		case COL_ST:		return n.getST();
 		case COL_COUNTY:	return n.getCounty();
 		case COL_COMMODITY:	return n.getCommodity();
-		case COL_CAL_YEAR:	return new Integer(n.getCal_year());
-		case COL_AG_AMT:	return new Double(n.getAg_amt());
+		case COL_CAL_YEAR:	return Integer.valueOf(n.getCal_year());
+		case COL_AG_AMT:	return Double.valueOf(n.getAg_amt());
 		case COL_FLAG:		return n.getFlag();
 		default:		return "";
 	}
